--- a/templates/oauth_confirm.html
+++ b/templates/oauth_confirm.html
@@ -1,194 +1,117 @@
 {% set page_group = "loggedout" %}
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'common/components/head.html' %}
-  <body>
-    <div class="container">
-        {% include 'common/components/main-nav.html' %}
-      <div class="jumbotron">
-        <h1>Let's get started!</h1>
-        <p class="lead">Registration is fast and simple.</p>
-        {% include 'common/components/alerts.html' %}
-            <div class="row">
-              <div class="col-md-12">
-                  <a href="/account/register?oauthlogin=linkedin" class="btn btn-success" >Register using LinkedIn</a>
-<h2>Hello {{oauth_details.name}}</h2>' .
-                    <img src="{{oauth_details.imageUrl}}">
-            
-            <img src="http://www.gravatar.com/avatar/{{oauth_details.email}}?s=32" />';
-              </div>
-            </div>
-        
-        <form name="register" method="post" action="{{site.uri.public}}/account/register" class="form-horizontal">
-        {% include 'common/components/csrf.html' %}
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="control-label  col-sm-4">Username</label>
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>
-                                <input type="text" class="form-control" name="user_name" autocomplete="off" value="" placeholder="User name">
-                            </div>
-                        </div>
+    {% include 'common/components/head.html' %}
+    <body>
+        <div class="container">
+            {% include 'common/components/main-nav.html' %}
+            <div class="jumbotron">
+                {% include 'common/components/alerts.html' %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <h4>Confirm {{oauth_provider}} registration</h4>
+                        <h5>Hello {{oauth_details.name}}</h5>
+                        <img src="{{oauth_details.imageUrl}}">
+                        <img src="http://www.gravatar.com/avatar/{{oauth_details.email}}?s=32" />
+                        <p class="lead">Review details below and confirm.</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Display Name</label>
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>
-                                <input type="text" class="form-control" name="display_name" 
-                                       autocomplete="off"  placeholder="Display name"
-                                       value="{{ oauth_details.name }}">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Email</label>
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-fw fa-envelope"></i></span>
-                                <input type="text" class="form-control" name="email" 
-                                       placeholder="Email address" value="{{ oauth_details.email }}">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>		  
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Password</label>
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>
-                                <input type="password" class="form-control" name="password" autocomplete="off" value="" placeholder="8-50 characters">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Confirm password</label>
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>
-                                <input type="password" class="form-control" name="passwordc" autocomplete="off" value="" placeholder="Re-enter your password">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% if site.enable_captcha %}
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Confirm captcha code</label>
-                        <div class="col-sm-4">
-                            <div class="input-group"><span class="input-group-addon"><i class="fa fa-fw fa-eye"></i></span>
-                                <input type="text" class="form-control" id="captcha-input" name="captcha" autocomplete="off" value="" placeholder="Organics only!">
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <img src="{{captcha_image}}" id="captcha" data-target="#captcha-input">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endif %}
-            <br>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div>  
-                        <button type="submit" name="btn_register" class="btn btn-success"  data-loading-text="Please wait..." >Register</button>
-                    </div>
-                </div>
-            </div>
-            <div class="collapse">
-              <label>Spiderbro: Don't change me bro, I'm tryin'a catch some flies!</label>
-              <input name="spiderbro" id="spiderbro" value="http://"/>
-            </div>          
-        </form>
-        {% include 'common/components/jumbotron-links.html' %}	
-      </div>	
-    </div> <!-- /container -->
-    {% include 'common/components/footer.html' %}
-    <script>
-        $(document).ready(function() {           
-         // Process form 
-          $("form[name='register']").formValidation({
-            framework: 'bootstrap',
-            // Feedback icons
-            icon: {
-                valid: 'fa fa-check',
-                invalid: 'fa fa-times',
-                validating: 'fa fa-refresh'
-            },
-            fields: {{ validators | raw }}
-          }).on('success.form.fv', function(e) {
-            // Prevent double form submission
-            e.preventDefault();
 
-            // Get the form instance
-            var form = $(e.target);
 
-            // Serialize and post to the backend script in ajax mode
-            var serializedData = form.serialize();
-            var url = form.attr('action');
-            $.ajax({  
-              type: "POST",  
-              url: url,  
-              data: serializedData       
-            }).done(function(data, statusText, jqXHR) {
-                // Forward to login page on success
-                window.location.replace(site.uri.public + "/account/login");
-            }).fail(function(jqXHR) {
-                if (site['debug'] == true) {
-                    document.body.innerHTML = jqXHR.responseText;
-                } else {
-                    console.log("Error (" + jqXHR.status + "): " + jqXHR.responseText );
-                    // Display errors on failure
-                    $('#userfrosting-alerts').flashAlerts().done(function() {
-                        // Re-enable submit button
-                        form.data('formValidation').disableSubmitButtons(false);
-                        // Reload captcha
-                        $("#captcha").captcha();
-                    });
-                }
-            });
-          });
-        });
-        
-        // This plugin reloads the captcha in the specified field
-        (function( $ ) {
-            $.fn.captcha = function() {
-                var field = $(this);
-                console.log("Reloading captcha");
-                
-                var img_src = site.uri.public + "/account/captcha?" + new Date().getTime();
-                
-                return $.ajax({  
-                  type: "GET",  
-                  url: img_src,  
-                  dataType: "text"
-                }).then(function(data, statusText, jqXHR) {  // Pass the deferral back
-                    field.attr('src', data);
-                    var target = field.data('target');
-                    $(target).val("");
-                    return data;
+                <form  style="text-align:left;" name="oauth_register" method="post" action="{{site.uri.public}}/oauth/{{ oauth_provider|lower }}/settings/confirm" class="form-horizontal">
+                    {% include 'common/components/csrf.html' %}
+                    <div class="table-responsive">
+                        <table class="table table-condensed">
+                            <tr><th>Field</th><th>Value</th></tr>
+                            {% for key,val in oauth_data %}
+                            <tr>
+                                <td >{{ key }}</td>
+                                <td >{{ val }}</td>
+                            </tr>
+                            {% endfor %}        
+                        </table>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div>  
+                                <button type="submit" name="btn_register" class="btn btn-success"  data-loading-text="Please wait..." >Register</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="collapse">
+                        <label>Spiderbro: Don't change me bro, I'm tryin'a catch some flies!</label>
+                        <input name="spiderbro" id="spiderbro" value="http://"/>
+                    </div>          
+                </form>
+            </div>	
+        </div> <!-- /container -->
+        {% include 'common/components/footer.html' %}
+        <script>
+            $(document).ready(function () {
+                // Process form 
+                $("form[name='register']").formValidation({
+                framework: 'bootstrap',
+                        // Feedback icons
+                        icon: {
+                        valid: 'fa fa-check',
+                                invalid: 'fa fa-times',
+                                validating: 'fa fa-refresh'
+                        },
+                        fields: {{ validators | raw }}
+            }).on('success.form.fv', function (e) {
+                // Prevent double form submission
+                e.preventDefault();
+
+                // Get the form instance
+                var form = $(e.target);
+
+                // Serialize and post to the backend script in ajax mode
+                var serializedData = form.serialize();
+                var url = form.attr('action');
+                $.ajax({
+                type: "POST",
+                        url: url,
+                        data: serializedData
+                }).done(function (data, statusText, jqXHR) {
+                    // Forward to login page on success
+                    window.location.replace(site.uri.public + "/account/login");
+                }).fail(function (jqXHR) {
+                    if (site['debug'] == true) {
+                        document.body.innerHTML = jqXHR.responseText;
+                    } else {
+                        console.log("Error (" + jqXHR.status + "): " + jqXHR.responseText);
+                        // Display errors on failure
+                        $('#userfrosting-alerts').flashAlerts().done(function () {
+                            // Re-enable submit button
+                            form.data('formValidation').disableSubmitButtons(false);
+                            // Reload captcha
+                            $("#captcha").captcha();
+                        });
+                    }
                 });
-            };
-        }( jQuery ));        
-    </script>
-  </body>
+                });
+            });
+
+            // This plugin reloads the captcha in the specified field
+            (function ($) {
+                $.fn.captcha = function () {
+                    var field = $(this);
+                    console.log("Reloading captcha");
+
+                    var img_src = site.uri.public + "/account/captcha?" + new Date().getTime();
+
+                    return $.ajax({
+                        type: "GET",
+                        url: img_src,
+                        dataType: "text"
+                    }).then(function (data, statusText, jqXHR) {  // Pass the deferral back
+                        field.attr('src', data);
+                        var target = field.data('target');
+                        $(target).val("");
+                        return data;
+                    });
+                };
+            }(jQuery));
+        </script>
+    </body>
 </html>
